--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,12 @@
   <version>1.0-SNAPSHOT</version>
   <packaging>war</packaging>
 
+  <properties>
+    <hibernate.version>4.3.11.Final</hibernate.version>
+    <mysql.version>5.1.46</mysql.version>
+    <lombok.version>1.16.16</lombok.version>
+  </properties>
+
   <dependencies>
     <dependency>
       <groupId>jstl</groupId>
@@ -28,13 +34,24 @@
     <dependency>
       <groupId>org.projectlombok</groupId>
       <artifactId>lombok</artifactId>
-      <version>1.16.16</version>
+      <version>${lombok.version}</version>
       <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>commons-io</groupId>
       <artifactId>commons-io</artifactId>
       <version>2.6</version>
+    </dependency>
+    <dependency>
+      <groupId>mysql</groupId>
+      <artifactId>mysql-connector-java</artifactId>
+      <version>${mysql.version}</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.hibernate</groupId>
+      <artifactId>hibernate-core</artifactId>
+      <version>${hibernate.version}</version>
     </dependency>
   </dependencies>
 
