--- a/pom.xml
+++ b/pom.xml
@@ -47,7 +47,6 @@
       <artifactId>mysql-connector-java</artifactId>
       <version>${mysql.version}</version>
     </dependency>
-
     <dependency>
       <groupId>org.hibernate</groupId>
       <artifactId>hibernate-core</artifactId>
@@ -65,6 +64,24 @@
           <target>1.8</target>
         </configuration>
       </plugin>
+
+        <plugin>
+            <groupId>org.flywaydb</groupId>
+            <artifactId>flyway-maven-plugin</artifactId>
+            <version>4.0.3</version>
+            <configuration>
+                <url>jdbc:mysql://localhost:3306/webproject</url>
+                <user>root</user>
+                <password>Qwerty2@</password>
+            </configuration>
+            <dependencies>
+                <dependency>
+                    <groupId>mysql</groupId>
+                    <artifactId>mysql-connector-java</artifactId>
+                    <version>5.1.46</version>
+                </dependency>
+            </dependencies>
+        </plugin>
     </plugins>
   </build>
 
